tests/valid/generic_int_types.lang
import c "core:c";

extern fn main() -> i32 {
    if (@sizeof(int) != @sizeof(*void)) c.abort();

    return 0;
}
