tests/invalid/assign_to_array_ptr.lang
extern fn main() -> i32 {
    var arr: [1]i32;
    arr.ptr = null;
    return 0;
}
